# NCC-Rust

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  ReadMe.md  rustfmt.toml
.github/workflows/: claude-code-review.yml  claude.yml  coverage.yml  lint.yml  rust_quality.yml  tests.yml
ncc/src/: codegen.rs  emit.rs  lexer.rs  main.rs  parser.rs  tacky.rs
src/: codegen.rs  color.rs  emit.rs  emit_iced.rs  lexer.rs  main.rs  parser.rs  pretty.rs  tacky.rs  validate.rs
tests/: runner.rs
tests/c_programs/: expected_results.json  large_shift_immediate.c
tests/c_programs/conversions/: double_to_int_edges.c
tests/c_programs/evaluation_order/: arithmetic_side_effects.c  left_first.c  test_left.c  test_middle.c  test_order.c  test_postinc.c
tests/c_programs/examples/: collatz.c  hello_world.c
tests/c_programs/int_wrapping/: int_wrapping.c  long_min_literal.c  loop_wrapping.c  overflow_tests.c
tests/c_programs/loops/: complex_loop_expressions_simple.c  debug_conditional_break.c  debug_middle_break.c  deeply_nested_loops.c  empty_for_components.c  nested_dowhile_continue.c
tests/c_programs/static_vars/: cmp_data_patterns.c  data_operand_coverage.c  idiv_data.c  mixed_alignment.c  mult_data_src.c  setcc_data.c  variable_shift_data.c
tests/c_programs/switch/: complex_const_int.c
tests/c_programs/types/: compound_assign_mixed_types.c
tests/c_programs/unsigned/: comparisons.c  division.c  implicit_return_falloff.c  shift.c  widening_casts.c
tests/c_programs/warnings/: constant_conversion.c  division_by_zero.c  float_overflow.c  (+12 more)
(+21 files in other folders)
